# Obsidian

./: .gitignore  csv_to_markdown.py  hello.R  lab-report.md  ragrep.md  reviews_ascii.txt  reviews_graphviz.dot  reviews_graphviz_simple.dot  reviews_mermaid.md  reviews_plantuml.puml  screed.md
Applied AI role/: job-description.md
Backpacks/: Implementing a Trace-Generation Interface.md  backpacks.md
Workflows/: feature-table.csv  feature-table.md
agentless/: Agentless timing.md  Agentless.md  Get `dataset_shim` working with other datasets.md  Rerun testing component of Agentless with fixed inputs (from original Agentless code).md  calculate_token_costs.py
ansible/: Get ansible working locally.md
atlas/: chris-meeting-doc.md  crawl_pytorch_issues.py  meeting-summary.md  pyproject.toml  research-plan.md  survey.py
atlas-debug/: useful-command.md
atlas-evals/: claude-code-results.json  full-context-results.json  main.py  plot_results.py  pyproject.toml  ragrep-results.json  tina-eval.csv
bridgewater/: KNOWN_ISSUES.md  bridgewater.txt  design-doc-sketch.md  design-doc.md  firestore.yml  github-integrations.md  meeting-notes.md  rfc.md
codemonkeys/: Get `codemonkeys` to build with pants.md  Model costs.md  design-doc-draft.md  design-doc-sketch.md  design-doc-sketch2.md
company-strategy/: technical-strategy-presentation.md  thoughts.md
design-docs/: bridgewater-optimization-system.md  proust-conversation-notes.md
environment-v4/: localization.md  verified-sampled-scores.csv  verified-scores.csv  visualize_scores.py
life/: flight_chooser.py  main.py  (+5 more)
(+17 files in other folders)
