[project]
name = "atlas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pydantic-ai>=0.0.55",
    "pydantic-ai-slim[anthropic]>=0.0.55",
    "pygithub>=2.6.1",
    "seaborn>=0.13.2",
]
